--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
     "@ionic-native/email-composer": "^5.33.0",
+    "@ionic-native/sqlite": "^4.20.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-sqlite-storage": "^6.0.0",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
