--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@capacitor/core": "3.0.0",
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
+    "@capacitor/storage": "^1.0.0",
+    "@codetrix-studio/capacitor-google-auth": "^3.0.1",
     "@ionic-native/email-composer": "^5.33.0",
     "@ionic-native/sqlite": "^4.20.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
+    "bootstrap": "^5.0.1",
     "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-plugin-googleplus": "^8.5.2",
     "cordova-sqlite-storage": "^6.0.0",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
